# carthage

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish-base.yml
base/: .dockerignore  Dockerfile  SANDBOX.md  entrypoint.sh  tmux.conf
carthage/: __init__.py  __main__.py  compose.py  config.py  image.py  personal_config.py  personal_image.py  ports.py  runtime.py  skills.py
carthage/commands/: attach.py  build.py  destroy.py  down.py  fortify.py  status.py  survey.py  up.py
skill/carthage-annex/: CHANGELOG.md  SKILL.md
skill/carthage-annex/templates/: Dockerfile.j2  carthage-config.toml.j2  carthage-env-SKILL.md.j2  docker-compose.yaml.j2
tests/: test_annex_template_drift.py  test_config.py  test_image_hash.py  test_personal_compose_override.py  test_personal_config.py  test_personal_image.py  test_runtime_overlay.py
tests/e2e/: conftest.py  test_a_no_service.py  test_b_with_redis.py  test_base_image_tools.py  test_c_bash_history.py  test_d_base_image_version.py  test_e_annex_drift.py  test_f_personal_config.py
tests/e2e/fixtures/py-http-server/: app.py
tests/e2e/fixtures/py-http-server/.carthage/: Dockerfile  config.toml  docker-compose.yaml
tests/e2e/fixtures/py-http-server/.claude/skills/carthage-env/: SKILL.md
tests/e2e/fixtures/py-with-redis/: app.py
tests/e2e/fixtures/py-with-redis/.carthage/: Dockerfile  config.toml  docker-compose.yaml
