[project]
name = "carthage-cli"
version = "1.2.0"
description = "Host-side CLI for managing Carthage sandboxed dev-environment containers"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jeff Tao" }]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "tomli>=2.0; python_version < '3.11'",
    "jinja2>=3.1",
]

[project.scripts]
carthage = "carthage.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["carthage"]

# Bundle the personal Claude skills into the wheel so `carthage fortify` can
# copy them out of package data at install time — no network, no git required.
# They end up at `carthage/_skills/<name>/` inside the installed package.
[tool.hatch.build.targets.wheel.force-include]
"skill" = "carthage/_skills"

[tool.hatch.build.targets.sdist]
include = [
    "carthage/",
    "skill/",
    "README.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests that build Docker images and spin up containers (require Docker)",
    "project_fixture(name): parametrize an E2E test with a fixture project under tests/e2e/fixtures/",
]
